--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -181,7 +181,7 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .btn-twitter:active,.btn-twitter:hover,.btn-twitter:focus{background:#0087bd;color:#fff;}
 .btn-facebook{background:#3b5998;border-radius:0;color:#fff;}
 .btn-facebook:active,.btn-facebook:hover,.btn-facebook:focus{background:#30477a;color:#fff;}
-.btn-tumblr{background:#36465D;border-radius:0;color:#fff;}
+.btn-tumblr{background:#36465D;border-radius:0;color:#fff!important;}
 .btn-tumblr:active,.btn-tumblr:hover,.btn-tumbler:focus{background:#253142;color:#fff;}
 .btn-googleplus{background: #d34836;border-radius: 0;color: #fff;}
 .btn-googleplus:active,.btn-googleplus:hover,.btn-googleplus:focus{background:#ba3225;color:#fff;}
