--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -3,6 +3,7 @@
 {% from "projects/_helpers.html" import broken_image %}
 {% import "blog/_helpers.html" as helper %}
 {% set preload_js = "true" %}
+{% set description = "All about crowdsourcing projects from the British Library and beyond." %}
 
 {% block content %}
 <div class="container container-main">
