--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -3,6 +3,7 @@
 {% set active_project  = "all" %}
 {% import "privacy/locked.html" as privacy %}
 {% set has_splash = "true" %}
+{% set description = "Download open datasets created via the experimental crowdsourcing projects hosted on the LibCrowds." %}
 
 {% block content %}
 <div class="splash" id="data-splash">
