--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -2,6 +2,7 @@
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
 {% set preload_js = "true" %}
+{% set description = "Participate in crowdsourcing projects and help improve access to collections of the British Library." %}
 
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
