--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% set active_page = "about" %}
 {% set has_splash = "true" %}
+{% set description = "Find out about the LibCrowds platform, which hosts experimental crowdsourcing projects from the British Library" %}
 
 {% block content %}
     {% include ['custom/_about.html', 'home/_about.html'] ignore missing %}
