--- a/templates/projects/snippets/cards.html
+++ b/templates/projects/snippets/cards.html
@@ -302,8 +302,8 @@ $(document).delegate('#oclc_search_form', 'submit', function(e) {
   if ($("#isbn_field").val() !== "") {searchArray['isbn'] = encodeURIComponent($("#isbn_field").val().trim().replace(/-/g, ""));}
   key = encodeURIComponent($('#api-key').attr('data-key'));
   libs = '"(DLC or CUY or ZCU or HMY or PULEA or YUL or CNEAL or CGU or COO or AMH or AUT or NSL or SLY or L2U or OCLCA or OCLCQ or OCLCF or OCLCO)"';
-  searchStr = 'http://www.libcrowds.com/api/z3950/oclc/search?format=HTML&api_key=' + key + '&query=(1,1183)="eng"and(1,6119)=' + libs + 'and';
-  countStr = 'http://www.libcrowds.com/api/z3950/oclc/count?api_key=' + key + '&query=(1,1183)="eng"and(1,6119)=' + libs + 'and';
+  searchStr = 'http://www.libcrowds.com/api/z3950/zcat.oclc.org/OLUCWorldcat/search?format=HTML&api_key=' + key + '&query=(1,1183)="eng"and(1,6119)=' + libs + 'and';
+  countStr = 'http://www.libcrowds.com/api/z3950/zcat.oclc.org/OLUCWorldcat/count?api_key=' + key + '&query=(1,1183)="eng"and(1,6119)=' + libs + 'and';
   var notFirst = 0;
   for (var key in searchArray){
     switch (key){
