--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,6 +45,7 @@ textarea{resize:none}
 .margin-bottom-xs{margin-bottom:10px}
 .padding-bottom{padding-bottom:50px}
 .padding-bottom-sm{padding-bottom:30px}
+.padding-bottom-xs{padding-bottom:10px}
 .padding-left-xs{padding-left:10px}
 .padding-sides-xs{padding-left:5px;padding-right:5px;}
 .margin-bottom{margin-bottom:50px}
@@ -239,6 +240,7 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .arc.percent23:before{-moz-transform:skewX(-82.8deg);-webkit-transform:skewX(-82.8deg);-ms-transform:skewX(-82.8deg);-o-transform:skewX(-82.8deg);transform:skewX(-82.8deg);border: solid 10px #2FA92F;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;}
 .arc.percent24:before{-moz-transform:skewX(-86.4deg);-webkit-transform:skewX(-86.4deg);-ms-transform:skewX(-86.4deg);-o-transform:skewX(-86.4deg);transform:skewX(-86.4deg);border: solid 10px #2FA92F;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;}
 .arc.percent25:before{-moz-transform:skewX(-90deg);-webkit-transform:skewX(-90deg);-ms-transform:skewX(-90deg);-o-transform:skewX(-90deg);transform:skewX(-90deg);border: solid 10px #2FA92F;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;}
+.blogpost img{max-width:100%;height:auto;}
 .blog-menu{margin-top: 20px;}
 .blog-menu .blog-menu-title{margin-bottom: 0;padding:5px 10px;font-weight:400;background-image:url(../img/patterns/brushed.png);text-transform:uppercase;}
 .blog-menu .blog-menu-body{border:1px solid #E8E8E8;display:block;padding:10px}
